# rainier-signatures

./: CMakeLists.txt  LICENSE  README.md  instances.cpp  instances.h  kdf_shake.h  rain.cpp  rain.h  rain_128_3.h  rain_128_4.h  rain_192_3.h  rain_192_4.h  rain_256_3.h  rain_256_4.h  signature.cpp  signature.h  tape.cpp  tape.h  tree.cpp  tree.h  types.h
field/: CMakeLists.txt  field.h  field_GF2_128.cpp  field_GF2_192.cpp  field_GF2_256.cpp  field_fast_multiplication.cpp  field_templates.cpp
field/tests/: field_GF2_128_test.cpp  field_GF2_192_test.cpp  field_GF2_256_test.cpp  util_test.cpp  utils.cpp  utils.h
keccak/: CMakeLists.txt
keccak/opt64/: KeccakP-1600-64.macros
tests/: rain_test.cpp  signature_test.cpp  tree_test.cpp
tools/: bench.cpp  bench_all.py  bench_free.cpp  bench_utils.cpp  bench_utils.h
tools/scripts/: Rain-128-3.txt  Rain-128-4.txt  Rain-192-3.txt  Rain-192-4.txt  Rain-256-3.txt  Rain-256-4.txt  rain_instance_gen.sage  rainier_soundness.sage
